option('tnode-tests', type : 'boolean', value : false, description : 'Add TNode classes unit tests')
option('introspection', type : 'boolean', value : false, description : 'Create GObject Introspection file definitions')
option('docs', type : 'boolean', value : false, description : 'Generate Vala Documentation')
